--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="top">
             <div class="budget">
                 <div class="budget__title">
-                     <span class="budget__title--month">Available Budget in Month</span>:
+                     <span class="budget__title--month"></span>Available Budget
                 </div>
                 
                 <div class="budget__value">+ 2,345.64</div>
